--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link href="css/nav-style.css" rel="stylesheet">
   <link href="css/contact.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
@@ -62,10 +63,8 @@
       </div> 
 
         <div class="right-direct">
-          <div id="black-overlay-right-direct"> 
           <div id="map">
-           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13247.491662184453!2d151.17671803532565!3d-33.892926678712556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12b02d640e141f%3A0x241e4d2a3d16da21!2sNoddys%20on%20King!5e0!3m2!1sen!2sau!4v1603166984494!5m2!1sen!2sau" width="100%" height="900px"frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>   
-          </div>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13247.491662184453!2d151.17671803532565!3d-33.892926678712556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12b02d640e141f%3A0x241e4d2a3d16da21!2sNoddys%20on%20King!5e0!3m2!1sen!2sau!4v1603166984494!5m2!1sen!2sau" width="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>   
           </div>
         </div>
       </section>
