added styles to collection

--- a/collections.html
+++ b/collections.html
@@ -49,12 +49,12 @@
 <img src="../images/Heavenly6.jpg" alt="">
 <img src="../images/Heavenly7.jpg" alt=""></div>
 </section> 
-
+<h2 class="heaven">HEAVENLY CREATURES</h2>
 
 <video loop muted autoplay class="video">
   <source src="https://www.technotonic.com/paul/Get Free (Shane Henning).mp4">
     </video>
- 
+ <h2 class="get">GET FREE</h2>
 
       <section id="summer">
         <div class="summer-left"><img src="../images/NOK 01.jpeg">
@@ -67,7 +67,7 @@
         <img src="../images/NOK 04.jpeg">
       </div>
     </section>
-
+<h2 class="indian">INDIAN SUMMER</h2>
   
     <section id="sub-col">
         <div class="sub-col-left"><img src="../images/NOK_subterfuge_2010_02.jpeg">
@@ -81,13 +81,14 @@
       </div>
     </section>
   </section>
-
+  <h2 class="fuge">SUBTERFUGE</h2>
     <section id="still-col">
        <video loop muted autoplay class="fullscreen-video1">
           <source src="https://www.technotonic.com/paul/STILL%20LIVES%20(Shane%20Henning).mp4">
-             <h2 class="still-collection-title">STILL LIVES</h2> 
+             <!-- <h2 class="still-collection-title">STILL LIVES</h2>  -->
             </video> 
           </section>
+           <h2 class="lives">STILL LIVES</h2>
 
          <section id="raven">
           <div class="raven-left"><img src="../images/NOK_RAVEN_2013_01.jpeg">
@@ -100,6 +101,7 @@
           <img src="../images/NOK_RAVEN_2013_04.jpeg">
         </div>
       </section>
+      <h2 class="ven">RAVEN</h2>
 
       <footer class="contact-footer">
         <div class="contact-partners">
