--- a/awards.html
+++ b/awards.html
@@ -13,7 +13,7 @@
   
     <header class="header-awards">
       <div class="nok-logo">
-        <a href="index.html"><img src="../images/noknew white logo.png"></a>
+        <a href="index.html"><img src="images/noknew white logo.png"></a>
       </div>
       
       <nav class="topnav-right">
@@ -63,13 +63,13 @@
      <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../images/Shaneawards2.png" class="d-block w-100" alt="shane awards">
+          <img src="images/Shaneawards2.png" class="d-block w-100" alt="shane awards">
         </div>
         <div class="carousel-item">
-          <img src="../images/shaneawards3.png" class="d-block w-100" alt="shane awards">
+          <img src="images/shaneawards3.png" class="d-block w-100" alt="shane awards">
         </div>
        </div>
-     <div class="shane"><img src="../images/Shaneawards.png"
+     <div class="shane"><img src="images/Shaneawards.png"
       </div>
    </div>
  </section>
