--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <header class="header-home">
     <div class="nok-logo">
       
-      <img src="../images/noknew white logo.png">
+      <img src="images/noknew white logo.png">
     </div> 
     
    <nav class="topnav-right">
