--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header-services">
     <div class="nok-logo"> 
-      <a href="index.html"><img src="../images/noknew white logo.png"></a>
+      <a href="index.html"><img src="images/noknew white logo.png"></a>
       
     </div> 
 
