--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header-about">
     <div class="nok-logo">
-      <a href="index.html"><img src="../images/noknew white logo.png"></a>
+      <a href="index.html"><img src="images/noknew white logo.png"></a>
      </div> 
     
       <nav class="topnav-right">
