--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header-contact">
     <div class="nok-logo">
-      <a href="index.html"><img src="../images/noknew white logo.png"></a>
+      <a href="index.html"><img src="images/noknew white logo.png"></a>
     </div>
    
       <nav class="topnav-right">
