changed path for video

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <section class="getfree-collection-container">
     <div class="getfree-indiv-collection-container">
     <h2 class="getfree-collection-title">GET FREE</h2>
-    <a href="collections.html#still-col"class="more-get more">SEE MORE</a>
+    <a href="collections.html.video"class="more-get more">SEE MORE</a>
   </section>
 
 
