added link to video

--- a/collections.html
+++ b/collections.html
@@ -51,9 +51,12 @@
 </section> 
 <h2 class="heaven">HEAVENLY CREATURES</h2>
 
+
+<section id="free-col">
 <video loop muted autoplay class="video">
   <source src="https://www.technotonic.com/paul/Get Free (Shane Henning).mp4">
     </video>
+  </section>
  <h2 class="get">GET FREE</h2>
 
       <section id="summer">
@@ -82,6 +85,7 @@
     </section>
   </section>
   <h2 class="fuge">SUBTERFUGE</h2>
+
     <section id="still-col">
        <video loop muted autoplay class="fullscreen-video1">
           <source src="https://www.technotonic.com/paul/STILL%20LIVES%20(Shane%20Henning).mp4">
