updated hamburger navigation

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
      </div> 
     
       <nav class="topnav-right">
-      <a href="about.html">About</a>
+      <a href="">About</a>
       <a href="collections.html">Collections</a>
       <a href="awards.html">Awards</a>
       <a href="services.html">Services</a>
@@ -26,7 +26,7 @@
 
     <aside class="hamburger-menu">
       <img class="menu-close" src="https://icon-library.com/images/cancel-icon-transparent/cancel-icon-transparent-3.jpg">
-       <a href="about.html">About</a>
+       <a href="about.html">About</a> 
        <a href="collections.html">Collections</a>
        <a href="awards.html">Awards</a>
        <a href="services.html">Services</a>
