--- a/awards.html
+++ b/awards.html
@@ -19,7 +19,7 @@
       <nav class="topnav-right">
         <a href="about.html">About</a>
         <a href="collections.html">Collections</a>
-        <a href="awards.html">Awards</a>
+        <a href="">Awards</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -29,7 +29,7 @@
          <img class="menu-close" src="https://icon-library.com/images/cancel-icon-transparent/cancel-icon-transparent-3.jpg">
          <a href="about.html">About</a>
          <a href="collections.html">Collections</a>
-         <a href="awards.html">Awards</a>
+          <a href="awards.html">Awards</a> 
          <a href="services.html">Services</a>
          <a href="contact.html">Contact</a>
        </aside>
@@ -57,21 +57,20 @@
           <p>Entrepreneur Of The Year</p>
         </div>
       </div>
-   
   
     <div class="right-awards">
      <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/Shaneawards2.png" class="d-block w-100" alt="shane awards">
+          <img src="images/Shaneawards3.png" class="d-block w-100" alt="shane awards">
         </div>
         <div class="carousel-item">
-          <img src="images/shaneawards3.png" class="d-block w-100" alt="shane awards">
+          <img src="images/shaneawards2.png" class="d-block w-100" alt="shane awards">
         </div>
        </div>
-     <div class="shane"><img src="images/Shaneawards.png"
-      </div>
-   </div>
+       </div>
+     <div class="shane"><img src="images/Shaneawards.png"></div>
+     </div>
  </section>
     
   
@@ -89,7 +88,7 @@
         </div>
       
          <div class="contact-address">
-          <p>NODDYS ON KING 88 KING STREET NEWTOWN 2042. PH: 02 9550 6402 WWW.NODDYSONKING.COM.AU</p>
+          <p>NODDYS ON KING 88 KING STREET NEWTOWN 2042. PH: 02 9550 6402 <br>WWW.NODDYSONKING.COM.AU</p>
         </div>
       </footer>  
 
