--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
        <a href="collections.html">Collections</a>
        <a href="awards.html">Awards</a>
        <a href="services.html">Services</a>
-       <a href="contact.html">Contact</a>
+       <a href="contact.html">Contact</a> 
      </aside>
   </header>
   
@@ -88,7 +88,7 @@
          </div>
 
          <div class="contact-address">
-          <p>NODDYS ON KING 88 KING STREET NEWTOWN 2042. <br>PH: 02 9550 6402 WWW.NODDYSONKING.COM.AU</p>
+          <p>NODDYS ON KING 88 KING STREET NEWTOWN 2042. PH: 02 9550 6402 <br>WWW.NODDYSONKING.COM.AU</p>
         </div>
     </footer>  
              
