--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <aside class="hamburger-menu">
      <img class="menu-close" src="https://icon-library.com/images/cancel-icon-transparent/cancel-icon-transparent-3.jpg">
-     <a href="index.html">Home</a>
+     <!-- <a href="index.html">Home</a> -->
      <a href="about.html">About</a>
      <a href="collections.html">Collections</a>
      <a href="awards.html">Awards</a>
