--- a/collections.html
+++ b/collections.html
@@ -19,7 +19,7 @@
     
       <nav class="topnav-right">
       <a href="about.html">About</a>
-      <a href="collections.html">Collections</a>
+      <a href="">Collections</a>
       <a href="awards.html">Awards</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
@@ -119,7 +119,7 @@
        </div>
    
        <div class="contact-address">
-        <p>NODDYS ON KING 88 KING STREET NEWTOWN 2042.<br> PH: 02 9550 6402 WWW.NODDYSONKING.COM.AU</p>
+        <p>NODDYS ON KING 88 KING STREET NEWTOWN 2042. PH: 02 9550 6402 <br>WWW.NODDYSONKING.COM.AU</p>
       </div>
     </footer> 
 
